cmd/pint/tests/0076_ci_group_errors.txt
http response bitbucket /rest/insights/1.0/projects/prometheus/repos/rules/commits/.*/reports/pint 200 OK
http response bitbucket /rest/api/1.0/projects/prometheus/repos/rules/commits/.*/pull-requests 200 {}
http start bitbucket 127.0.0.1:6076

mkdir testrepo
cd testrepo
exec git init --initial-branch=main .

cp ../src/v1.yml rules.yml
cp ../src/.pint.hcl .
env GIT_AUTHOR_NAME=pint
env GIT_AUTHOR_EMAIL=pint@example.com
env GIT_COMMITTER_NAME=pint
env GIT_COMMITTER_EMAIL=pint@example.com
exec git add .
exec git commit -am 'import rules and config'

exec git checkout -b v2
cp ../src/v2.yml rules.yml
exec git commit -am 'v2'

env BITBUCKET_AUTH_TOKEN="12345"
! exec pint -l warn --no-color ci --require-owner
! stdout .
cmp stderr ../stderr.txt

-- src/v1.yml --
groups:
- name: mygroup
  rules:
  - record: rule1
    expr: sum(foo) by(job)
-- src/v2.yml --
groups:
- name: mygroup
  rules:
  - alert: syntax error
    expr: sum(foo) bar

  - alert: missing required fields
    expr: no_such_metric{job="fake"}

  - record: vector_matching
    expr: up{job="prometheus"} / prometheus_build_info{job="prometheus"}

  - alert: count
    expr: up{job="prometheus"} == 0
    for: 2m
    labels:
      notify: blackhole

  - alert: for_and_rate
    expr: rate(no_such_metric[10s])
    for: 0m
    labels:
      notify: blackhole

  - alert: template
    expr: sum(no_such_metric) by(foo) > 0
    labels:
      value: '{{ $value }}'
    annotations:
      instance: 'sum on {{ $labels.instance }} is {{ $value }}'

  - alert: fragile
    expr: errors / sum(requests) without(rack)

  - record: regexp
    expr: sum(no_such_metric{job=~"fake"})

  - alert: dups
    expr: errors / sum(requests) without(rack)
    #expr: errors / sum(requests) without(rack)
    #alert: dups
-- src/.pint.hcl --
ci {
  baseBranch = "main"
}
parser {
  include    = [".+.yml"]
}
repository {
  bitbucket {
    uri        = "http://127.0.0.1:6076"
    timeout    = "10s"
    project    = "prometheus"
    repository = "rules"
  }
}
rule {
  match {
    kind = "recording"
  }
  aggregate ".+" {
    severity = "bug"
    keep     = ["job"]
  }
}
rule {
  match {
    kind = "alerting"
  }
  annotation "link" {
    severity = "bug"
    value    = "http://runbooks.example.com/(.+)"
    required = true
  }
}
rule {
  match {
    kind = "alerting"
  }
  ignore {
    kind = "alerting"
    label "notify" {
      value = "blackhole"
    }
  }
  annotation "summary" {
    severity = "bug"
    required = true
  }
  annotation "dashboard" {
    severity = "bug"
    value    = "https://grafana.example.com/(.+)"
  }
  label "priority" {
    severity = "bug"
    value    = "(1|2|3|4|5)"
    required = true
  }
  label "notify" {
    severity = "bug"
    required = true
  }
  label "component" {
    severity = "bug"
    required = true
  }
}

-- stderr.txt --
Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Bug: `summary` annotation is required. (alerts/annotation)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Bug: `component` label is required. (rule/label)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Bug: `notify` label is required. (rule/label)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Bug: `priority` label is required. (rule/label)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:4-5
 4 |   - alert: syntax error
 5 |     expr: sum(foo) bar

Fatal: PromQL syntax error (promql/syntax)
  ---> rules.yml:5
4 |   - alert: syntax error
5 |     expr: sum(foo) bar
                       ^^^ unexpected identifier "bar"

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Bug: `summary` annotation is required. (alerts/annotation)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Bug: `component` label is required. (rule/label)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Bug: `notify` label is required. (rule/label)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Bug: `priority` label is required. (rule/label)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:7-8
 7 |   - alert: missing required fields
 8 |     expr: no_such_metric{job="fake"}

Warning: Alert query doesn't have any condition, it will always fire if the metric exists. (alerts/comparison)
  ---> rules.yml:8
 8 |     expr: no_such_metric{job="fake"}

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:10-11
 10 |   - record: vector_matching
 11 |     expr: up{job="prometheus"} / prometheus_build_info{job="prometheus"}

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:13-17
 13 |   - alert: count
 14 |     expr: up{job="prometheus"} == 0
 15 |     for: 2m
 16 |     labels:
 17 |       notify: blackhole

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:13-17
 13 |   - alert: count
 14 |     expr: up{job="prometheus"} == 0
 15 |     for: 2m
 16 |     labels:
 17 |       notify: blackhole

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:19-23
 19 |   - alert: for_and_rate
 20 |     expr: rate(no_such_metric[10s])
 21 |     for: 0m
 22 |     labels:
 23 |       notify: blackhole

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:19-23
 19 |   - alert: for_and_rate
 20 |     expr: rate(no_such_metric[10s])
 21 |     for: 0m
 22 |     labels:
 23 |       notify: blackhole

Warning: Alert query doesn't have any condition, it will always fire if the metric exists. (alerts/comparison)
  ---> rules.yml:20
 20 |     expr: rate(no_such_metric[10s])

Information: redundant field with default value (alerts/for)
  ---> rules.yml:21
19 |   - alert: for_and_rate
20 |     expr: rate(no_such_metric[10s])
21 |     for: 0m
              ^^ `0m` is the default value of `for`, this line is unnecessary.
22 |     labels:
23 |       notify: blackhole

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:25-30
 25 |   - alert: template
 26 |     expr: sum(no_such_metric) by(foo) > 0
 27 |     labels:
 28 |       value: '{{ $value }}'
 29 |     annotations:
 30 |       instance: 'sum on {{ $labels.instance }} is {{ $value }}'

Bug: `component` label is required. (rule/label)
  ---> rules.yml:27-28
 27 |     labels:
 28 |       value: '{{ $value }}'

Bug: `notify` label is required. (rule/label)
  ---> rules.yml:27-28
 27 |     labels:
 28 |       value: '{{ $value }}'

Bug: `priority` label is required. (rule/label)
  ---> rules.yml:27-28
 27 |     labels:
 28 |       value: '{{ $value }}'

Bug: Using `$value` in labels will generate a new alert on every value change, move it to annotations. (alerts/template)
  ---> rules.yml:28
 28 |       value: '{{ $value }}'

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:29-30
 29 |     annotations:
 30 |       instance: 'sum on {{ $labels.instance }} is {{ $value }}'

Bug: `summary` annotation is required. (alerts/annotation)
  ---> rules.yml:29-30
 29 |     annotations:
 30 |       instance: 'sum on {{ $labels.instance }} is {{ $value }}'

Bug: Template is using `instance` label but the query results won't have this label. (alerts/template)
  ---> rules.yml:30
 30 |       instance: 'sum on {{ $labels.instance }} is {{ $value }}'

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Bug: `summary` annotation is required. (alerts/annotation)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Bug: `component` label is required. (rule/label)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Bug: `notify` label is required. (rule/label)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Bug: `priority` label is required. (rule/label)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:32-33
 32 |   - alert: fragile
 33 |     expr: errors / sum(requests) without(rack)

Warning: Alert query doesn't have any condition, it will always fire if the metric exists. (alerts/comparison)
  ---> rules.yml:33
 33 |     expr: errors / sum(requests) without(rack)

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:35-36
 35 |   - record: regexp
 36 |     expr: sum(no_such_metric{job=~"fake"})

Warning: redundant regexp (promql/regexp)
  ---> rules.yml:36
35 |   - record: regexp
36 |     expr: sum(no_such_metric{job=~"fake"})
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unnecessary regexp match on static string `job=~"fake"`, use `job="fake"` instead.

Bug: required label is being removed via aggregation (promql/aggregate)
  ---> rules.yml:36
35 |   - record: regexp
36 |     expr: sum(no_such_metric{job=~"fake"})
               ^^^ Query is using aggregation that removes all labels.
                   `job` label is required and should be preserved when aggregating all rules.

Bug: `link` annotation is required. (alerts/annotation)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Bug: `summary` annotation is required. (alerts/annotation)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Bug: `component` label is required. (rule/label)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Bug: `notify` label is required. (rule/label)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Bug: `priority` label is required. (rule/label)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Bug: `rule/owner` comments are required in all files, please add a `# pint file/owner $owner` somewhere in this file and/or `# pint rule/owner $owner` on top of each rule. (rule/owner)
  ---> rules.yml:38-39
 38 |   - alert: dups
 39 |     expr: errors / sum(requests) without(rack)

Warning: Alert query doesn't have any condition, it will always fire if the metric exists. (alerts/comparison)
  ---> rules.yml:39
 39 |     expr: errors / sum(requests) without(rack)

level=ERROR msg="Execution completed with error(s)" err="submitting reports: fatal error(s) reported"
